service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vad-server
spec:
  selector:
    app: vad-server
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer
